<resources>
    <string name="app_name">WeatherByVolkoks</string>
    <string name="action_settings">Settings</string>
    <string name="country">Country</string>
    <string name="city">Moscow</string>
    <string name="temp">16</string>
    <string name="w_icon">W_icon</string>
    <string name="update_time">Update_time</string>
    <string name="button">Button</string>
    <string name="menu">MENU</string>
    <string name="choose_a_city">Choose a city:</string>
    <string name="celsius">\u2103</string>
    <string name="mainly_cloudy">Mainly cloudy</string>
    <string name="setting_label">Setting:</string>
    <string name="night_mode">Night Mode</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="extreme_weather_alert">Extreme Weather Alert</string>
    <string name="moscow">Moscow</string>
    <string name="saint_petersburg">Saint Petersburg</string>
    <string name="_20">20</string>
    <string name="_15">15</string>
    <string name="sunny">Sunny</string>
    <string name="choose_temperature">Choose temperature:</string>
    <string name="choose_city">Choose city</string>
    <string name="choose_a_city_tool_bar">choose_a_city_tool_bar</string>
    <string name="description">description</string>
    <string name="refresh">refresh</string>
    <string name="about_app">About app</string>
    <string name="about_app_message">Educational application "Weather". Developer - Alexander Volkov.</string>
    <string name="btn_ok">OK</string>
    <string name="delete">delete</string>
    <string name="humidity">humidity</string>
    <string name="wind">Wind:</string>
    <string name="m_s">m/s</string>
    <string name="air_humidity">Air humidity:</string>
    <string name="pressure">Pressure:</string>
</resources>
