<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CitySelectionScreen.CitySelectionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".CitySelectionScreen.CitySelectionScreen">

            <TextView
                android:id="@+id/choose_city_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="20dp"
                android:text="@string/choose_a_city"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="#00FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />


            <LinearLayout
                android:id="@+id/selected_city_one"
                android:layout_width="398dp"
                android:layout_height="129dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="7dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <CheckBox
                    android:id="@+id/choose1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:id="@+id/City"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moscow"
                    android:textSize="24sp"
                    tools:ignore="DuplicateIds" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Temperature"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_20"
                        tools:ignore="DuplicateIds" />

                    <TextView
                        android:id="@+id/celsius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/celsius"
                        tools:ignore="DuplicateIds" />

                    <TextView
                        android:id="@+id/empty_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        tools:ignore="DuplicateIds" />
                </LinearLayout>

                <TextView
                    android:id="@+id/weather_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunny"
                    android:textSize="18sp"
                    tools:ignore="DuplicateIds" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/selected_city_two"
                android:layout_width="398dp"
                android:layout_height="129dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="250dp"
                android:layout_marginEnd="7dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <CheckBox
                    android:id="@+id/choose2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:id="@+id/City"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saint_petersburg"
                    android:textSize="24sp"
                    tools:ignore="DuplicateIds" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Temperature"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_15"
                        tools:ignore="DuplicateIds" />

                    <TextView
                        android:id="@+id/celsius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/celsius"
                        tools:ignore="DuplicateIds" />

                    <TextView
                        android:id="@+id/empty_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        tools:ignore="DuplicateIds" />
                </LinearLayout>

                <TextView
                    android:id="@+id/weather_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainly_cloudy"
                    android:textSize="18sp"
                    tools:ignore="DuplicateIds" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/button_add_city"
                android:layout_width="61dp"
                android:layout_height="62dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="19dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_choose_a_city_and_temperature"
                app:srcCompat="@android:drawable/ic_input_add" />


            <TextView
                android:id="@+id/choose_city_textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:text="@string/choose_a_city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selected_city_two" />

            <EditText
                android:id="@+id/enter_city_selection"
                android:layout_width="348dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_city_textview2" />

            <TextView
                android:id="@+id/temperature_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/choose_temperature"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_city_selection" />

            <EditText
                android:id="@+id/enter_temperature_selection"
                android:layout_width="348dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperature_selection" />

            <Button
                android:id="@+id/button_choose_a_city_and_temperature"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="131dp"
                android:text="@string/choose_city_and_temperature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_temperature_selection" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</FrameLayout>